feat:Adicionou API Docs para Schedules
